Adding POC code for the multi format merge for the following approaches 1. Reindex 2. Reorder 3. Index sort
Signed-off-by: Sagar Darji <darjisagar7@gmail.com>